# data-validator-tool

./: .gitignore  .python-version  Makefile  README.md  pyproject.toml  run_samples.sh  tox.ini
.github/workflows/: ci.yml
docs/: adding-notifications.md  adding-parsers.md  adding-validators.md  cli-usage.md  notebook-usage.md
examples/: README.md  api_quickstart.ipynb  sample_files_walkthrough.ipynb
examples/.ipynb_checkpoints/: README-checkpoint.md  api_quickstart-checkpoint.ipynb  sample_files_walkthrough-checkpoint.ipynb
sample_data/: 1.csv  2.csv  3.csv  4.csv  customers_10m_schema.json  customers_5m_schema.json  customers_schema.json  large_schema.json  messy.csv  messy.json  messy.tsv  messy_pipe.csv  messy_schema.json  messy_semicolon.csv  my_schema.json  searchspring.csv  searchspring.jsonl  searchspringschema.json  simple_schema.json  test_small.jsonl
scripts/: generate_large_data.py
src/data_validator/: __init__.py  __main__.py  api.py  cli.py  config.py  engine.py  formatting.py  models.py  parser.py  report_view.py  schema.py
src/data_validator/notifications/: __init__.py  base.py  registry.py
src/data_validator/parsers/: __init__.py  base.py  registry.py
src/data_validator/reporting/: history.py  html_renderer.py
src/data_validator/validators/: __init__.py  base.py  registry.py
tests/: conftest.py  test_api.py  test_cli.py  test_parser.py  test_reporting_history.py  test_schema.py
tests/e2e/: test_e2e.py
tests/test_validators/: test_columns.py  test_non_empty.py  test_range.py  test_regex.py  test_types.py  test_unique.py
(+19 files in other folders)
