[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-validator"
version = "0.1.0"
description = "A format-agnostic, extensible data file validation CLI tool"
authors = [
    { name = "Rohith Rangaraju", email = "rangaraju963@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.1",
    "charset-normalizer>=3.0",
    "typer>=0.12",
    "polars>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
validate = "data_validator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/data_validator"]

[tool.hatch.build.targets.sdist]
include = ["src/data_validator", "docs", "README.md", "pyproject.toml"]
exclude = [".*", "__pycache__", "*.pyc"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]
exclude = [".venv", ".mypy_cache", ".ruff_cache", ".pytest_cache", "__pycache__", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=data_validator --cov-report=term-missing -v"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["data_validator"]
mypy_path = "src"
exclude = ["build", "dist", "\\.venv"]
